# Conveyor-AI

./: .gitignore  REFACTORING_PLAN.md
Conveyor-AI-main/Modulars/: app_v2.py  app_v3.py  bot_profiles_v3.py  modular_belt.py  planner_v3.py
Modulars/: app.py  app_v2.py  app_v3.py  app_v3.py.bak  bot_profiles_v3.py  fillthegap.txt  generate_daily_report.py  launch_rehearsal.ps1  launch_swarm_ui.ps1  modular_belt.py  pytest.ini  run_rehearsal.py  sync_start_swarm_shortcut.ps1  unity_math_notes.py
Modulars/.chainlit/: config.toml
Modulars/swarm_core/: __init__.py  artifacts.py  bots.py  chat_lane.py  compaction.py  controller.py  efficiency.py  failure_memory.py  hallucination_guard.py  local_models.py  local_runtime.py  preflight.py  prompt_guard.py  rosetta.py  (+8 more)
conveyor_v2/: .env.example  INTERFACE_CONTRACTS.md  pyproject.toml
conveyor_v2/src/conveyor/: __main__.py  config.py  exceptions.py
conveyor_v2/src/conveyor/agents/: __init__.py  agent.py  profiles.py
conveyor_v2/src/conveyor/core/: __init__.py  chat_lane.py  compaction.py  controller.py  memory.py  orchestrator.py  preflight.py  prompt_guard.py  rehearsal.py  skill_evolution.py  stability_guard.py  types.py
conveyor_v2/src/conveyor/models/: __init__.py  local_runtime.py  session_state.py
conveyor_v2/src/conveyor/tests/: __init__.py  test_agent.py  test_chat_lane.py  test_commands.py  test_compaction.py  test_memory.py  test_profiles.py  test_session_state.py  test_status_formatter.py  test_types.py
conveyor_v2/src/conveyor/ui/: __init__.py  chainlit_app.py  command_handlers.py  status_formatter.py
(+24 files in other folders)
